# umass-dining

./: Cargo.toml  flake.nix  test.py
.github/workflows/: nix.yml
src/: main.rs
